# character-memory

./: .clinerules  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  NOTICE.md  README.md  SECURITY.md  docker-compose.oxigraph.test.yml  docker-compose.oxigraph.yml  docker-compose.qdrant.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue-template.md
.github/hooks/: pre-commit
.github/workflows/: check_formatting.yaml  ci.yml  format_code.yaml  pr_validation.yaml
docs/: project_philosophy.md
docs/coding-agent/: FOLLOWUP-SEED.md  HANDOFF.md  lessons.md  skill-candidates.md
docs/decisions/: README.md  template.md
docs/design/: continuity_situation_catalog.md  project_philosophy.md  structured_verdict_contract.md
docs/roadmap/: agent_thread_kickoff.md  development_roadmap.md  v0_1_5_closeout_report.md
src/: adapters.rs  api.rs  composition.rs  config.rs  databases.rs  domain.rs  errors.rs  infrastructures.rs  internal.rs  lib.rs  memory.rs  models.rs  policy.rs  ports.rs  repositories.rs  test_support.rs  usecases.rs
src/adapters/: openai.rs  oxigraph.rs  (+2 more)
tests/: initialization_tests.rs  memory_creation_tests.rs  memory_full_text_filter_tests.rs  memory_modification_tests.rs  memory_retrieval_tests.rs  memory_search_tests.rs  public_facade_tests.rs  qdrant_full_text_filter_tests.rs  retrieval_guardrails_tests.rs  test_utils.rs  v0_1_2_retrieval_guardrails_tests.rs  v0_1_3_write_planning_tests.rs  v0_1_public_facade_tests.rs  write_planning_tests.rs
(+284 files in other folders)
