[package]
name = "character_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
config = "0.15.22"
dotenvy = "0.15.7"
thiserror = "2.0.18"
mockall = "0.14.0"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }

# Serialization & Security
serde = { version = "1.0.217", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }

# Database
qdrant-client = "1.17.0"
oxigraph = { version = "0.5.7", default-features = false }
serde_json = "1.0.138"

# Async Runtime
tokio = { version = "1.52.1", features = ["full"] }
async-trait = "0.1.86"

# Utils
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
